--- a/locale/en/locale.po
+++ b/locale/en/locale.po
@@ -7,8 +7,8 @@ msgstr ""
 "PO-Revision-Date: 2022-07-04 06:31+0000\n"
 "Last-Translator: Jonas Raoni Soares da Silva <weblate@raoni.org>\n"
 "Language-Team: English (United States) <http://translate.pkp.sfu.ca/projects/"
-"plugins/medra/en_US/>\n"
-"Language: en_US\n"
+"plugins/medra/en/>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
