--- a/README
+++ b/README
@@ -33,6 +33,7 @@ If the automatic deposit option (in plugin settings) is selected, the mEDRA serv
 
 Version History
 ---------------
+3.0.0.4 - consider no contributors, use subtitle element, consider different schema location for test and production
 3.0.0.3 - iParadigms crawler and text-mining collection element, and unstructured citation list added for OJS 3.3.0-14
 3.0.0.2 - But fix for OJS 3.3.0-6
 3.0.0.1 - But fix for OJS 3.3.0-5
