--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 =============================================================
-=== Usage Statistics Plugin
-=== Version: 3.0
+=== mEDRA Plugin
+=== Version: 4.0
 =============================================================
 
 About
 -----
-This plugin enables the export of issue, article and galley metadata in ONIX4DOI format and
+This plugin enables the export of issue and article metadata in ONIX4DOI format and
 the registration of DOIs with mEDRA.
 
 License
@@ -14,7 +14,7 @@ This plugin is licensed under the GNU General Public License v3. See the file LI
 
 System Requirements
 -------------------
-Same requirements as for the OJS 3.3 core.
+Same requirements as for the OJS 3.4 core.
 
 
 Installation
@@ -23,20 +23,20 @@ Use the Plugin Gallery from within your PKP application to install the plugin.
 
 Note
 ---------
-In order to use the export into the ONIX4DOI XML format you will need to setup the plugin i.e. to enter the required information.
+In order to use the export into the ONIX4DOI XML format you will need to setup the DOI registration agency mEDRA i.e. to enter the required information.
 To register DOIs with mEDRA from within OJS you will have to enter your username and password.
 If you do not enter or have your own username and password you'll still be able to export into the
 ONIX4DOI XML format but you cannot register your DOIs from within OJS.
 Please note, that the passowrd will be saved as plain text, i.e. not encrypted, due to mEDRA registration service requirements.
 To use the additional possibility to deposit the DOIs also with the Crossref, this mEDRA service will have to be enabled for your account.
-If the automatic deposit option (in plugin settings) is selected, the mEDRA service to deposit the DOIs also with Crossref cannot be currently used.
 
 Version History
 ---------------
+3.4.0.0 - update to OJS 3.4
 3.0.0.4 - consider no contributors, use subtitle element, consider different schema location for test and production
 3.0.0.3 - iParadigms crawler and text-mining collection element, and unstructured citation list added for OJS 3.3.0-14
-3.0.0.2 - But fix for OJS 3.3.0-6
-3.0.0.1 - But fix for OJS 3.3.0-5
+3.0.0.2 - Bug fix for OJS 3.3.0-6
+3.0.0.1 - Bug fix for OJS 3.3.0-5
 3.0.0.0 - Plugin moved to its own repository and provided via Plugin Gallery
 
 Contact/Support
