--- a/locale/en/locale.po
+++ b/locale/en/locale.po
@@ -7,19 +7,40 @@ msgstr ""
 "PO-Revision-Date: 2022-07-04 06:31+0000\n"
 "Last-Translator: Jonas Raoni Soares da Silva <weblate@raoni.org>\n"
 "Language-Team: English (United States) <http://translate.pkp.sfu.ca/projects/"
-"plugins/medra/en/>\n"
-"Language: en\n"
+"plugins/medra/en_US/>\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.9.1\n"
 
+msgid "plugins.generic.medra.displayName"
+msgstr "mEDRA Manager Plugin"
+
+msgid "plugins.generic.medra.description"
+msgstr "Handles depositing and exporting mEDRA metadata"
+
+msgid "plugins.generic.medra.registrationAgency.name"
+msgstr "mEDRA"
+
+msgid "plugins.generic.medra.deposit.unsuccessful"
+msgstr "Registration was not successful! Please check your configuration and try again."
+
 msgid "plugins.importexport.medra.displayName"
 msgstr "mEDRA Export/Registration Plugin"
 
 msgid "plugins.importexport.medra.description"
 msgstr "Export issue, article and galley metadata in Onix for DOI (O4DOI) format and register DOIs with the mEDRA registration agency."
+
+msgid "plugins.importexport.medra.settings.description"
+msgstr "Please configure the mEDRA export plugin before using it for the first time."
+
+msgid "plugins.importexport.medra.settings.label"
+msgstr "mEDRA Settings"
+
+msgid "plugins.importexport.medra.registrationAgency.name"
+msgstr "mEDRA"
 
 msgid "plugins.importexport.medra.intro"
 msgstr ""
@@ -40,6 +61,9 @@ msgstr "Username"
 
 msgid "plugins.importexport.medra.settings.form.usernameRequired"
 msgstr "Please enter your mEDRA username. The username may not contain colons."
+
+msgid "plugins.importexport.medra.settings.form.registrantName.label"
+msgstr "Registrant Name"
 
 msgid "plugins.importexport.medra.settings.form.registrantName"
 msgstr "The name of the institution registered at mEDRA"
@@ -71,11 +95,14 @@ msgstr "Please enter a valid technical contact email."
 msgid "plugins.importexport.medra.settings.form.publicationCountry"
 msgstr "Please choose the country to be informed as 'publication country' to mEDRA."
 
+#, fuzzy
 msgid "plugins.importexport.medra.settings.form.exportIssuesAs"
 msgstr ""
 "Please choose whether you want to export issues as <a href=\""
-"https://www.medra.org/en/metadata_td.htm\" target=\"_blank\">\"works\" or \""
-"manifestations\"</a>."
+"https://www.medra.org/en/metadata_td.htm\" target=\"_blank\">'works' or "
+"'manifestations'</a>.<br/>"
+"NB: DOIs assigned to articles will be exported to mEDRA as <a href=\""
+"https://www.medra.org/en/metadata_td.htm\" target=\"_blank\">'works'</a>. "
 
 msgid "plugins.importexport.medra.settings.form.work"
 msgstr "work"
@@ -102,8 +129,11 @@ msgstr ""
 msgid "plugins.importexport.medra.senderTask.name"
 msgstr "mEDRA automatic registration task"
 
+msgid "plugins.importexport.medra.crossref.label"
+msgstr "Deposit to Crossref"
+
 msgid "plugins.importexport.medra.crossref"
-msgstr "Deposit to Crossref. (This service must be enabled for your account.)"
+msgstr "Deposit the DOIs also with the Crossref. (This mEDRA service must be enabled for your account.)"
 
 msgid "plugins.importexport.medra.crossref.error.cause"
 msgstr "Cause: file not valid in respect to the mEDRA and/or Crossref requirements."
