--- a/README
+++ b/README
@@ -32,7 +32,8 @@ To use the additional possibility to deposit the DOIs also with the Crossref, th
 
 Version History
 ---------------
-3.4.0.0 - update to OJS 3.4
+4.0.0.1 - Bug fix for OJS 3.4.0.x
+4.0.0.0 - update to OJS 3.4
 3.0.0.4 - consider no contributors, use subtitle element, consider different schema location for test and production
 3.0.0.3 - iParadigms crawler and text-mining collection element, and unstructured citation list added for OJS 3.3.0-14
 3.0.0.2 - Bug fix for OJS 3.3.0-6
