--- a/README
+++ b/README
@@ -32,6 +32,7 @@ To use the additional possibility to deposit the DOIs also with the Crossref, th
 
 Version History
 ---------------
+4.0.0.3 - Bug fix for OJS 3.4.0.x
 4.0.0.2 - Bug fix for OJS 3.4.0.x
 4.0.0.1 - Bug fix for OJS 3.4.0.x
 4.0.0.0 - update to OJS 3.4
