update copyright year

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 =============================================================
-=== Usage Statistics Plugin
+=== mEDRA Plugin
 === Version: 3.0
 =============================================================
 
