--- a/README
+++ b/README
@@ -32,6 +32,7 @@ To use the additional possibility to deposit the DOIs also with the Crossref, th
 
 Version History
 ---------------
+4.0.0.5 - AccessIndicators information (OpenAccess and License), fix keywords and affiliation elements
 4.0.0.4 - Improvement for OJS 3.4.0.x: make MedraExportPlugin available in a job
 4.0.0.3 - Bug fix for OJS 3.4.0.x
 4.0.0.2 - Bug fix for OJS 3.4.0.x
